force-app/main/default/objects/Position__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Account_for_positions</relationshipName>
    <type>Lookup</type>
</CustomField>