force-app/main/default/objects/Position__c/fields/Additional_benefits__c.field-meta.xml
<CustomField>
    <fullName>Additional_benefits__c</fullName>
    <label>Additional benefits</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>