force-app/main/default/objects/Position__c/fields/Additional_reason_position_open__c.field-meta.xml
<CustomField>
    <fullName>Additional_reason_position_open__c</fullName>
    <label>Additional reason position open</label>
    <length>80</length>
    <type>Text</type>
</CustomField>