force-app/main/default/objects/Position__c/fields/Always_open__c.field-meta.xml
<CustomField>
    <fullName>Always_open__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you always want to receive applicants for this position. You can close the position by changing the status to &apos;Closed&apos;.</inlineHelpText>
    <label>Always open</label>
    <type>Checkbox</type>
</CustomField>