force-app/main/default/objects/Position__c/fields/Amount_of_rejections__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_rejections__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount of rejections</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>