force-app/main/default/objects/Position__c/fields/Approval_end_date__c.field-meta.xml
<CustomField>
    <fullName>Approval_end_date__c</fullName>
    <label>Approval end date</label>
    <type>Date</type>
</CustomField>