force-app/main/default/objects/Position__c/fields/Approval_start_date__c.field-meta.xml
<CustomField>
    <fullName>Approval_start_date__c</fullName>
    <label>Approval start date</label>
    <type>Date</type>
</CustomField>