force-app/main/default/objects/Position__c/fields/Approval_status__c.field-meta.xml
<CustomField>
    <fullName>Approval_status__c</fullName>
    <label>Approval status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Application distributed</fullName>
                <isActive>false</isActive>
                <label>Application distributed</label>
            </value>
            <value>
                <fullName>Candidates offered and in review of manager</fullName>
                <isActive>false</isActive>
                <label>Candidates offered and in review of manager</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>DEVOPS</fullName>
                <isActive>false</isActive>
                <label>DEVOPS</label>
            </value>
            <value>
                <fullName>Interviews planned</fullName>
                <isActive>false</isActive>
                <label>Interviews planned</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
            <value>
                <fullName>TEST</fullName>
                <isActive>false</isActive>
                <label>TEST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>