force-app/main/default/objects/Position__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Approver_for_positions</relationshipName>
    <type>Lookup</type>
</CustomField>