force-app/main/default/objects/Position__c/fields/Base_status__c.field-meta.xml
<CustomField>
    <fullName>Base_status__c</fullName>
    <label>Base status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>