force-app/main/default/objects/Position__c/fields/Business_unit__c.field-meta.xml
<CustomField>
    <fullName>Business_unit__c</fullName>
    <label>Business unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_unit_list</valueSetName>
    </valueSet>
</CustomField>