force-app/main/default/objects/Position__c/fields/Closed_reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_reason__c</fullName>
    <description>Holds reason why a position did not lead to a placement</description>
    <inlineHelpText>Reason why a position did not lead to a placement</inlineHelpText>
    <label>Closed reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>No candidates found</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>