force-app/main/default/objects/Position__c/fields/Deadline_candidate_submission__c.field-meta.xml
<CustomField>
    <fullName>Deadline_candidate_submission__c</fullName>
    <label>Deadline candidate submission</label>
    <type>Date</type>
</CustomField>