force-app/main/default/objects/Position__c/fields/Deadline_candidate_submission_filled__c.field-meta.xml
<CustomField>
    <fullName>Deadline_candidate_submission_filled__c</fullName>
    <formula>NOT(ISBLANK(Deadline_candidate_submission__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline candidate submission filled</label>
    <type>Checkbox</type>
</CustomField>