force-app/main/default/objects/Position__c/fields/Duration_extension__c.field-meta.xml
<CustomField>
    <fullName>Duration_extension__c</fullName>
    <label>Duration extension</label>
    <length>100</length>
    <type>Text</type>
</CustomField>