force-app/main/default/objects/Position__c/fields/Duration_for_extension__c.field-meta.xml
<CustomField>
    <fullName>Duration_for_extension__c</fullName>
    <label>Duration for extension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duration_list</valueSetName>
    </valueSet>
</CustomField>