force-app/main/default/objects/Position__c/fields/DurationinText__c.field-meta.xml
<CustomField>
    <fullName>DurationinText__c</fullName>
    <formula>IF(
    FLOOR(
        (
        (YEAR(End_date__c) - YEAR(Start_date__c)) * 12 +
        (MONTH(End_date__c) - MONTH(Start_date__c)) -
        IF( DAY(End_date__c) &lt; DAY(Start_date__c), 1, 0 )
        ) / 12
    ) &gt; 0,
    TEXT(
        FLOOR(
            ((YEAR(End_date__c) - YEAR(Start_date__c)) * 12 +(MONTH(End_date__c) - MONTH(Start_date__c)) -IF( DAY(End_date__c) &lt; DAY(Start_date__c), 1, 0 )) / 12
        )
    ) &amp; &quot; &quot; &amp;
    IF(
        FLOOR(
            (
            (YEAR(End_date__c) - YEAR(Start_date__c)) * 12 +
            (MONTH(End_date__c) - MONTH(Start_date__c)) -
            IF( DAY(End_date__c) &lt; DAY(Start_date__c), 1, 0 )
            ) / 12
        ) = 1, &quot;jaar&quot;, &quot;jaren&quot;
    ) &amp; &quot; &quot;,
    &quot;&quot;
) &amp; 

IF(
    MOD(
        (YEAR(End_date__c) - YEAR(Start_date__c)) * 12 +
        (MONTH(End_date__c) - MONTH(Start_date__c)) -
        IF( DAY(End_date__c) &lt; DAY(Start_date__c), 1, 0 ),
        12
    ) &gt; 0,
    TEXT(
        MOD(
            (YEAR(End_date__c) - YEAR(Start_date__c)) * 12 +
            (MONTH(End_date__c) - MONTH(Start_date__c)) -
            IF( DAY(End_date__c) &lt; DAY(Start_date__c), 1, 0 ),
            12
        )
    ) &amp; &quot; &quot; &amp;
    IF(
        MOD(
            (YEAR(End_date__c) - YEAR(Start_date__c)) * 12 +
            (MONTH(End_date__c) - MONTH(Start_date__c)) -
            IF( DAY(End_date__c) &lt; DAY(Start_date__c), 1, 0 ),
            12
        ) = 1, &quot;maand&quot;, &quot;maanden&quot;
    ) &amp; &quot; &quot;,
    &quot;&quot;
) &amp; 

IF(
    DAY(End_date__c) &gt;= DAY(Start_date__c),
    IF(
        (DAY(End_date__c) - DAY(Start_date__c)) &gt; 0,
        TEXT(
            FLOOR(
                (DAY(End_date__c) - DAY(Start_date__c))
            )
        ) &amp; &quot; &quot; &amp;
        IF(
            (DAY(End_date__c) - DAY(Start_date__c)) = 1, &quot;dag&quot;, &quot;dagen&quot;
        ),
        &quot;&quot;
    ),
    IF(
        (
        CASE(
            MONTH(Start_date__c),
            2, IF(
                OR(
                    MOD( YEAR( Start_date__c), 400 ) = 0,
                    AND(
                        MOD( YEAR( Start_date__c), 4 ) = 0,
                        MOD( YEAR( Start_date__c), 100 ) != 0
                    )
                ),
                29,28
            ),4, 30,6, 30,9, 30,11, 30,31
        ) - DAY(Start_date__c) + DAY(End_date__c)
        ) &gt; 0,
        TEXT(
            CASE(
                MONTH(Start_date__c),
                2, IF(
                    OR(
                        MOD( YEAR( Start_date__c), 400 ) = 0,
                        AND(MOD( YEAR( Start_date__c), 4 ) = 0,MOD( YEAR( Start_date__c), 100 ) != 0
                        )
                    ),29,28
                ),
                4, 30,6, 30,9, 30,11, 30,31
            ) - DAY(Start_date__c) + DAY(End_date__c)
        ) &amp; &quot; &quot; &amp;
        IF(
            CASE(
                MONTH(Start_date__c),
                2, IF(
                    OR(
                        MOD( YEAR( Start_date__c), 400 ) = 0,
                        AND(
                            MOD( YEAR( Start_date__c), 4 ) = 0,MOD( YEAR( Start_date__c), 100 ) != 0
                        )
                    ),
                    29,28
                ),
                4, 30,6, 30,9, 30,11, 30,31
            ) - DAY(Start_date__c) + DAY(End_date__c) = 1, &quot;dag&quot;, &quot;dagen&quot;
        ),
        &quot;&quot;
    )
)</formula>
    <label>Duration</label>
    <type>Text</type>
</CustomField>