force-app/main/default/objects/Position__c/fields/Dynamic_URL__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp;  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dynamic URL</label>
    <type>Text</type>
</CustomField>