force-app/main/default/objects/Position__c/fields/Education_or_experience__c.field-meta.xml
<CustomField>
    <fullName>Education_or_experience__c</fullName>
    <label>Education or experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Education_experience_list</valueSetName>
    </valueSet>
</CustomField>