force-app/main/default/objects/Position__c/fields/Estimated_spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_spend__c</fullName>
    <label>Estimated spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>