force-app/main/default/objects/Position__c/fields/Has_preferred_candidates__c.field-meta.xml
<CustomField>
    <fullName>Has_preferred_candidates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has preferred candidate(s)</label>
    <type>Checkbox</type>
</CustomField>