force-app/main/default/objects/Position__c/fields/Hiring_manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Positions (Hiring manager)</relationshipLabel>
    <relationshipName>Hiring_manager_for_positions</relationshipName>
    <type>Lookup</type>
</CustomField>