force-app/main/default/objects/Position__c/fields/Internal_deadline__c.field-meta.xml
<CustomField>
    <fullName>Internal_deadline__c</fullName>
    <description>Deadline by which to fill position</description>
    <label>Internal deadline</label>
    <type>DateTime</type>
</CustomField>