force-app/main/default/objects/Position__c/fields/Internal_information__c.field-meta.xml
<CustomField>
    <fullName>Internal_information__c</fullName>
    <label>Internal information</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>