force-app/main/default/objects/Position__c/fields/Internal_recruiter__c.field-meta.xml
<CustomField>
    <fullName>Internal_recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal recruiter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Positions (Internal recruiter)</relationshipLabel>
    <relationshipName>Recruiter_for_positions</relationshipName>
    <type>Lookup</type>
</CustomField>