force-app/main/default/objects/Position__c/fields/Intro_text__c.field-meta.xml
<CustomField>
    <fullName>Intro_text__c</fullName>
    <label>Intro text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>