force-app/main/default/objects/Position__c/fields/Invited_intake_date__c.field-meta.xml
<CustomField>
    <fullName>Invited_intake_date__c</fullName>
    <label>Invited intake date</label>
    <type>DateTime</type>
</CustomField>