force-app/main/default/objects/Position__c/fields/Is_template_position__c.field-meta.xml
<CustomField>
    <fullName>Is_template_position__c</fullName>
    <label>Is template position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual_position</fullName>
                <label>Actual position</label>
            </value>
            <value>
                <fullName>Template_position</fullName>
                <label>Template position</label>
            </value>
            <value>
                <fullName>Concept_position</fullName>
                <label>Concept position</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>