force-app/main/default/objects/Position__c/fields/IsGebruikerInhurendManager__c.field-meta.xml
<CustomField>
    <fullName>IsGebruikerInhurendManager__c</fullName>
    <formula>Hiring_manager__c ==  $User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsGebruikerInhurendManager</label>
    <type>Checkbox</type>
</CustomField>