force-app/main/default/objects/Position__c/fields/Location_depr__c.field-meta.xml
<CustomField>
    <fullName>Location_depr__c</fullName>
    <label>Location depr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>