force-app/main/default/objects/Position__c/fields/Location_picklist__c.field-meta.xml
<CustomField>
    <fullName>Location_picklist__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aspen Oss B.V.</fullName>
            </value>
            <value>
                <fullName>Aspen Oss</fullName>
            </value>
            <value>
                <fullName>Aspen Boxtel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>