force-app/main/default/objects/Position__c/fields/Max_hourly_rate__c.field-meta.xml
<CustomField>
    <fullName>Max_hourly_rate__c</fullName>
    <label>Max hourly rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>