force-app/main/default/objects/Position__c/fields/Max_hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>Max_hours_per_week__c</fullName>
    <label>Max hours per week</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>