force-app/main/default/objects/Position__c/fields/Max_number_of_applicants_number__c.field-meta.xml
<CustomField>
    <fullName>Max_number_of_applicants_number__c</fullName>
    <formula>VALUE(TEXT(Max_number_of_applicants_per_supplier__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max number of applicants number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>