force-app/main/default/objects/Position__c/fields/Min_hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>Min_hours_per_week__c</fullName>
    <label>Min hours per week</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>