force-app/main/default/objects/Position__c/fields/Moment_of_last_rejection__c.field-meta.xml
<CustomField>
    <fullName>Moment_of_last_rejection__c</fullName>
    <label>Moment of last rejection</label>
    <type>DateTime</type>
</CustomField>