force-app/main/default/objects/Position__c/fields/Open_date__c.field-meta.xml
<CustomField>
    <fullName>Open_date__c</fullName>
    <description>Date/time when status was set to open</description>
    <label>Open date</label>
    <type>DateTime</type>
</CustomField>