force-app/main/default/objects/Position__c/fields/Option_to_extend__c.field-meta.xml
<CustomField>
    <fullName>Option_to_extend__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the possibility to extend the duration exists.</inlineHelpText>
    <label>Option to extend</label>
    <type>Checkbox</type>
</CustomField>