force-app/main/default/objects/Position__c/fields/Option_to_extend_text__c.field-meta.xml
<CustomField>
    <fullName>Option_to_extend_text__c</fullName>
    <formula>IF(Option_to_extend__c = true, $Label.Yes, $Label.No)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option to extend</label>
    <type>Text</type>
</CustomField>