force-app/main/default/objects/Position__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Positions (Position)</relationshipLabel>
    <relationshipName>Positions1</relationshipName>
    <type>Lookup</type>
</CustomField>