force-app/main/default/objects/Position__c/fields/Position_offered_date__c.field-meta.xml
<CustomField>
    <fullName>Position_offered_date__c</fullName>
    <label>Position offered date</label>
    <type>DateTime</type>
</CustomField>