force-app/main/default/objects/Position__c/fields/Possible_permanent_employment__c.field-meta.xml
<CustomField>
    <fullName>Possible_permanent_employment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to indicate the possibility of permanent employment after placement.</inlineHelpText>
    <label>Possible permanent employment</label>
    <type>Checkbox</type>
</CustomField>