force-app/main/default/objects/Position__c/fields/Possible_permanent_employment_text__c.field-meta.xml
<CustomField>
    <fullName>Possible_permanent_employment_text__c</fullName>
    <formula>IF(Possible_permanent_employment__c = true, $Label.Yes, $Label.No)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Possible permanent employment</label>
    <type>Text</type>
</CustomField>