force-app/main/default/objects/Position__c/fields/Preferred_candidate_present__c.field-meta.xml
<CustomField>
    <fullName>Preferred_candidate_present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred candidate present</label>
    <type>Checkbox</type>
</CustomField>