force-app/main/default/objects/Position__c/fields/Processing_status__c.field-meta.xml
<CustomField>
    <fullName>Processing_status__c</fullName>
    <label>Processing status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Distributed</fullName>
            </value>
            <value>
                <fullName>Candidates offered and in review of manager</fullName>
            </value>
            <value>
                <fullName>Interviews planned</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>