force-app/main/default/objects/Position__c/fields/Reason_position_open__c.field-meta.xml
<CustomField>
    <fullName>Reason_position_open__c</fullName>
    <label>Reason position open</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_position_open_list</valueSetName>
    </valueSet>
</CustomField>