force-app/main/default/objects/Position__c/fields/Reason_rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_rejection__c</fullName>
    <label>Reason rejection</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>