force-app/main/default/objects/Position__c/fields/Reference_number__c.field-meta.xml
<CustomField>
    <fullName>Reference_number__c</fullName>
    <displayFormat>POS-{00000}</displayFormat>
    <label>Reference number</label>
    <type>AutoNumber</type>
</CustomField>