force-app/main/default/objects/Position__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>250</length>
    <type>Text</type>
</CustomField>