force-app/main/default/objects/Position__c/fields/Scale__c.field-meta.xml
<CustomField>
    <fullName>Scale__c</fullName>
    <label>Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schaal 1 - Test 1</fullName>
                <label>Schaal 1</label>
            </value>
            <value>
                <fullName>Schaal 1 - Test 2</fullName>
                <label>Schaal 2</label>
            </value>
            <value>
                <fullName>Schaal 2 - Test 1</fullName>
                <label>Schaal 3</label>
            </value>
            <value>
                <fullName>Schaal 2 - Test 2</fullName>
                <label>Schaal 4</label>
            </value>
            <value>
                <fullName>Schaal 3 - Test 2</fullName>
                <label>Schaal 5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>