force-app/main/default/objects/Position__c/fields/Sent_to_vendors_date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_vendors_date__c</fullName>
    <label>Sent to vendors date</label>
    <type>DateTime</type>
</CustomField>