force-app/main/default/objects/Position__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Afgewezen</label>
            </value>
            <value>
                <fullName>Concept</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Applications with hiring manager</fullName>
                <isActive>false</isActive>
                <label>Applications with hiring manager</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Sent to hiring manager</fullName>
                <isActive>false</isActive>
                <label>Sent to hiring manager</label>
            </value>
            <value>
                <fullName>Unapproved</fullName>
                <isActive>false</isActive>
                <label>Unapproved</label>
            </value>
            <value>
                <fullName>Up for correction</fullName>
                <isActive>false</isActive>
                <label>Up for correction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>