force-app/main/default/objects/Position__c/fields/Status_description__c.field-meta.xml
<CustomField>
    <fullName>Status_description__c</fullName>
    <label>Status description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>