force-app/main/default/objects/Position__c/fields/Types_of_applications__c.field-meta.xml
<CustomField>
    <fullName>Types_of_applications__c</fullName>
    <label>Types of applications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Independent contractor</fullName>
            </value>
            <value>
                <fullName>From supplier</fullName>
                <default>true</default>
                <label>From supplier</label>
            </value>
            <value>
                <fullName>Contractor_and_supplier</fullName>
                <label>Contractor and supplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>