force-app/main/default/objects/Position__c/fields/Website_URL_clickable__c.field-meta.xml
<CustomField>
    <fullName>Website_URL_clickable__c</fullName>
    <description>Creates clickable link from URL with position name as label</description>
    <formula>&apos;&lt;a href=&quot;&apos; + Website_URL__c + &apos;&quot; target=&quot;blank&quot;&gt;&apos; + Name + &quot;&lt;/a&gt;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website URL clickable</label>
    <type>Text</type>
</CustomField>