force-app/main/default/objects/Position__c/fields/Work_form__c.field-meta.xml
<CustomField>
    <fullName>Work_form__c</fullName>
    <label>Work form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_forms_list</valueSetName>
    </valueSet>
</CustomField>