force-app/main/default/objects/Position__c/recordTypes/Aspen.recordType-meta.xml
<RecordType>
    <fullName>Aspen</fullName>
    <active>true</active>
    <label>Aspen</label>
</RecordType>