force-app/main/default/objects/Position__c/recordTypes/Aspen_template.recordType-meta.xml
<RecordType>
    <fullName>Aspen_template</fullName>
    <active>true</active>
    <description>Used to create position templates</description>
    <label>Aspen template</label>
</RecordType>