force-app/main/default/objects/Position__c/recordTypes/Template.recordType-meta.xml
<RecordType>
    <fullName>Template</fullName>
    <active>true</active>
    <description>Used to create position templates</description>
    <label>Template</label>
</RecordType>